Bug 509312 - Error is displayed when editing date of a group of transactions
Summary: Error is displayed when editing date of a group of transactions
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: git (master)
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL: https://discuss.kde.org/t/date-error-...
Keywords:
Depends on:
Blocks:
 
Reported: 2025-09-09 15:54 UTC by Thomas Baumgart
Modified: 2025-09-10 13:02 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.2.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Thomas Baumgart 2025-09-09 15:54:43 UTC
SUMMARY

If I select (highlight) a group of transactions and then proceed to edit the date field of all of them, an error message is shown on the first time I access the date field (which is initially blank). When I click on the date field a second time, I’m able to set the date to a new value.

STEPS TO REPRODUCE
1. Select multiple transactions
2. Open the transaction editor
3. Click in the date edit widget

OBSERVED RESULT
Error message pops up

EXPECTED RESULT
No error message pops up when widget is simply selected
Comment 1 Thomas Baumgart 2025-09-10 12:55:58 UTC
Git commit d316db95b55e56c6c802e1c6330e02f5dfec47b9 by Thomas Baumgart.
Committed on 10/09/2025 at 12:55.
Pushed by tbaumgart into branch 'master'.

Suppress warning about invalid date in KDateComboBox
FIXED-IN: 5.2.2

M  +4    -0    kmymoney/widgets/kmymoneydateedit.cpp

https://invent.kde.org/office/kmymoney/-/commit/d316db95b55e56c6c802e1c6330e02f5dfec47b9
Comment 2 Thomas Baumgart 2025-09-10 13:02:12 UTC
Git commit 8fee395ba1ecb084cdabc8168bd0472cce2b0987 by Thomas Baumgart.
Committed on 10/09/2025 at 12:58.
Pushed by tbaumgart into branch '5.2'.

Suppress warning about invalid date in KDateComboBox
FIXED-IN: 5.2.2
(cherry picked from commit d316db95b55e56c6c802e1c6330e02f5dfec47b9)

M  +4    -0    kmymoney/widgets/kmymoneydateedit.cpp

https://invent.kde.org/office/kmymoney/-/commit/8fee395ba1ecb084cdabc8168bd0472cce2b0987