Suppress warning about invalid date in KDateComboBox

BUG: 509312
FIXED-IN: 5.2.2
(cherry picked from commit d316db95b55e56c6c802e1c6330e02f5dfec47b9)